Readability + Minor fix
Increased global text contrast.
Fixed a css mistake, where the hovering of the register button didn't change the text inside it.

--- a/src/auth/register/index.css
+++ b/src/auth/register/index.css
@@ -2,7 +2,7 @@
     --base-color: #1e1e1e;
     --border-color: #2c2c2c;
     --link-color: #646489;
-    --text-color: #9e9e9e;
+    --text-color: #d0d0d0;
 }
 
 * {
